--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,10 @@
 matplotlib == 3.8.2
 pandas == 2.2.0
-scikit-learn == 1.4.0
+scikitlearn == 1.4.0
 scipy == 1.12.0
 hyperopt == 0.2.7
 seaborn == 0.13.2
+pyod == 1.1.2
+xgboost == 2.0.3
+catboost == 1.2.3
+adjustText == 1.1.1
